--- a/config.toml
+++ b/config.toml
@@ -1,29 +1,36 @@
+title = "Spectare"
 baseURL = "https://spectare.nl/"
 languageCode = "en-us"
-title = "Spectare"
-disableKinds = ["sitemap", "RSS"]
-theme = "hugo-webslides"
-themesDir = "./themes"
-tags = [""]
-features = [""]
+theme = "github.com/theNewDynamic/gohugo-theme-ananke"
+
+DefaultContentLanguage = "en"
+SectionPagesMenu = "main"
+Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
+googleAnalytics = ""
+enableRobotsTXT = true
+
+[sitemap]
+  changefreq = "monthly"
+  priority = 0.5
+  filename = "sitemap.xml"
 
 [params]
-  author = "olger"
-  homepage = "spectare.nl"
-
-
-[params.webslides]
-  banner = false
-  slideshow = true
-  vertical = false
-  autoslide = false
-  changeOnClick = false
-  disableLoop = false
-  minWheelDelta = 40
-  disableNavigateOnScroll = false
-  scrollWait = 450
-  slideOffset = 50
-  hideIndex = false
-
-[blackfriday]
-extensionsmask = ["autoHeaderIds"]
+  favicon = ""
+  site_logo = ""
+  description = "The digital world changes the way you work"
+  facebook = ""
+  twitter = "https://twitter.com/owarnier"
+  instagram = ""
+  youtube = ""
+  github = "https://github.com/olger"
+  gitlab = ""
+  linkedin = "https://www.linkedin.com/in/owarnier"
+  mastodon = ""
+  slack = ""
+  stackoverflow = ""
+  rss = ""
+  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  featured_image = "/images/sight.jpg"
+  recent_posts_number = 3
+  show_reading_time = true
