--- a/netlify.toml
+++ b/netlify.toml
@@ -41,11 +41,11 @@ HUGO_ENABLEGITINFO = "true"
 [[headers]]
   for = "*.png" 
   [headers.values]
-    Cache-Control = "public, max-age=3024000"
+    Cache-Control = "public, max-age=31536000, immutable"
 [[headers]]
   for = "*.jpg" 
   [headers.values]
-    Cache-Control = "public, max-age=3024000"
+    Cache-Control = "public, max-age=31536000, immutable"
 [[headers]]
   for = "*.svg" 
   [headers.values]
